[package]
name = "lwa_fm"
edition = "2021"
homepage = "https://github.com/Leinnan/lwa_fm"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[dependencies]
serde = { version = "1", features = ["derive"] }
eframe = { version = "0.28", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.28"
egui_extras = { version = "*", features = ["all_loaders"] }
open = "5.3"
walkdir = "2"
sysinfo = "0.31"
directories = "5"
image = { version = "0.25", features = ["jpeg", "png"] }
rand = "0.8"
anyhow = "1.0"
egui-notify = "0.15.0"
once_cell = "1.19.0"
egui_dock = "0.13.0"
trash = "5.1.0"
arboard = "3.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
anyhow = "1.0"
winresource = "0.1.17"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
# this should be active but for that anyhow should be used everywhere
unwrap_used = { level = "deny", priority = 10 }

[package.metadata.bundle]
name = "LWA File Manager"
image = ["icon32x32.png", "icon128x128.png"]
identifier = "io.github.Leinnan.lwa_fm"
osx_url_schemes = ["io.github.Leinnan.lwa_fm"]
short_description = "File Manager"
long_description = "File Manager built with egui in Rust"
