[package]
name = "lwa_fm"
edition = "2021"
homepage = "https://github.com/Leinnan/lwa_fm"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[dependencies]
icu = "2.0.0"
notify = "6.1"
bevy_device_lang = "0.6"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
eframe = { version = "0.31", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui = "0.31"
egui_extras = { version = "*", features = ["all_loaders"] }
open = "5.3"
walkdir = "2"
sysinfo = "0.33"
directories = "6"
image = { version = "0.25", features = ["jpeg", "png"] }
rand = "0.8"
anyhow = "1"
egui-notify = "0.19"
once_cell = "1.20"
egui_dock = "0.16"
trash = "5.2"
arboard = "3.4.1"
embed_plist = "1.2"
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
anyhow = "1.0"
winresource = "0.1.19"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
# this should be active but for that anyhow should be used everywhere
unwrap_used = { level = "deny", priority = 10 }

[package.metadata.bundle]
name = "LWA File Manager"
image = ["32x32.png", "128x128.png", "128x128@2x.png", "icon.icns"]
resources = ["res/*"]
identifier = "com.mevlyshkin.lwa_fm"
osx_url_schemes = ["com.mevlyshkin.lwa_fm"]
short_description = "File Manager"
long_description = "File Manager built with egui in Rust"
